# maturin-uniffi-hello-world

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
python/hello_world/: __init__.py
src/: hello_world.udl  lib.rs
